# teslasynth-py

./: .gitignore  flake.nix  main.py  pyproject.toml  shell.nix
.github/workflows/: ci.yml
src/: cli.py  cli2.py  vis.py
src/teslasynth/: core.py  core2.py  curves.py  envelopes.py  instruments.py  lfo.py  visualization.py  visualization2.py  visualize.py
