[project]
name = "teslasynth"
version = "0.1.0"
description = "MIDI synth utility for interrupter based audio devices like Tesla coils"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "mido>=1.3.3",
    "numpy>=2.2.6",
    "plotly>=6.3.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "ruff>=0.13.0",
]

[project.scripts]
teslasynth = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
